--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
         "sass-loader": "^7.1.0",
         "vue-loader": "^15.7.0",
         "vue-template-compiler": "^2.6.10",
-        "webpack": "^4.35.3"
+        "webpack": "^4.35.3",
+        "bulma": "^0.7.5"
     },
     "dependencies": {
         "vue": "^2.6.10",
