--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,18 @@
-APP_NAME=Laravel
+APP_NAME=Crewman
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:LIYyVJBJDRkm0HxwAcSQ8R5rsu37MDRY6xlR3LkJ46g=
 APP_DEBUG=true
 APP_URL=http://localhost
 
 LOG_CHANNEL=stack
 
-DB_CONNECTION=mysql
+DB_CONNECTION=sqlite
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=database/database.sqlite
 DB_USERNAME=root
 DB_PASSWORD=
+DB_FOREIGN_KEYS=true
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
