--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
-        "axios": "^0.19",
+        "axios": "^0.19.0",
         "babel-core": "^6.26.3",
         "babel-loader": "^8.0.6",
         "babel-preset-env": "^1.7.0",
+        "bulma": "^0.7.5",
         "cross-env": "^5.1",
         "laravel-mix": "^4.0.7",
         "lodash": "^4.17.5",
@@ -22,8 +23,7 @@
         "sass-loader": "^7.1.0",
         "vue-loader": "^15.7.0",
         "vue-template-compiler": "^2.6.10",
-        "webpack": "^4.35.3",
-        "bulma": "^0.7.5"
+        "webpack": "^4.35.3"
     },
     "dependencies": {
         "vue": "^2.6.10",
