--- a/.env.example
+++ b/.env.example
@@ -6,12 +6,12 @@ APP_URL=http://localhost
 
 LOG_CHANNEL=stack
 
-DB_CONNECTION=sqlite
+DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=database/database.sqlite
+DB_DATABASE=crewman
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=root
 DB_FOREIGN_KEYS=true
 
 BROADCAST_DRIVER=log
