--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     },
     "devDependencies": {
         "axios": "^0.19.0",
+        "bootstrap-sass": "^3.4.1",
         "babel-core": "^6.26.3",
         "babel-loader": "^8.0.6",
         "babel-preset-env": "^1.7.0",
@@ -23,10 +24,12 @@
         "sass-loader": "^7.1.0",
         "vue-loader": "^15.7.0",
         "vue-template-compiler": "^2.6.10",
-        "webpack": "^4.35.3"
-    },
-    "dependencies": {
+        "webpack": "^4.35.3",
         "vue": "^2.6.10",
         "vue-router": "^3.0.7"
+    },
+    "dependencies": {
+        "bootstrap": "^4.3.1",
+        "jquery": "^3.4.1"
     }
 }
